make project installable with pnpm

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,4 +1,7 @@
+packages:
+  - packages/*
 onlyBuiltDependencies:
   - '@parcel/watcher'
-  - esbuild
+ignoredBuiltDependencies:
   - vue-demi
+  - esbuild
