--- a/package.json
+++ b/package.json
@@ -71,6 +71,10 @@
     "@vite-pwa/nuxt": "^1.0.0",
     "@vueuse/components": "^11.1.0",
     "clsx": "^2.1.1",
+    "@vite-pwa/assets-generator": "^1.0.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
+    "jspdf-html2canvas": "^1.5.2",
     "katex": "^0.16.11",
     "linkifyjs": "^4.2.0",
     "lowlight": "^3.1.0",
@@ -112,5 +116,6 @@
     "sass-embedded": "^1.79.1",
     "tailwindcss": "^3.4.15",
     "typescript": "^5.8.3"
-  }
+  },
+  "packageManager": "pnpm@10.10.0+sha512.d615db246fe70f25dcfea6d8d73dee782ce23e2245e3c4f6f888249fb568149318637dca73c2c5c8ef2a4ca0d5657fb9567188bfab47f566d1ee6ce987815c39"
 }
